# mqttdebug

./: README.md  setup.cfg
src/mqttdebug/: mqttpublish.py  mqttsubscribe.py
