[metadata]
name = mqttdebug-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = A simple MQTT debugging utility that allows subscribing to an arbitrary number of topics / publishing messages from the CLI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/mqttdebug
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    paho-mqtt >= 1.6.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mqttpublish = mqttdebug.mqttpublish:mainStartup
    mqttsubscribe = mqttdebug.mqttsubscribe:mainStartup
